--- a/index.html
+++ b/index.html
@@ -189,17 +189,17 @@
                 </header>
                 <p>
                   <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a>, Imperial College London</strong><br>
-                  <i>M.Sc. student, advised by Dr. John Michniewicz</i><br>
+                  <i>M.Sc. Student, advised by Dr. John Michniewicz</i><br>
                   <i>Jun. 2024 - Present</i>
                 </p>
                 <p>
                   <strong><a href="http://en.baqis.ac.cn/research/groups/?cid=814">Quantum Operating System Group</a>, Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
-                  <i>Research intern (remote), advised by Dr. Jingbo Wang</i><br>
+                  <i>Research Intern (remote), advised by Dr. Jingbo Wang</i><br>
                   <i>May 2024 - Present</i>
                 </p>
                 <p>
                   <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a>, Baidu, Inc.</strong><br>
-                  <i>Research intern, advised by Dr. Jingbo Wang</i><br>
+                  <i>Research Intern, advised by Dr. Jingbo Wang</i><br>
                   <i>Mar. 2023 - Sep. 2023</i>
                 </p>
                 <p>
@@ -209,8 +209,13 @@
                 </p>
                 <p>
                   <strong><a href="https://bradley-lab.weebly.com/"></a>Bradley Lab</strong>, University of Saskatchewan - Saskatoon<br>
-                  <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a>, advised by Prof. Michael Bradley</i><br>
+                  <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a> (remote), advised by Prof. Michael Bradley</i><br>
                   <i>Jun. 2021 - Oct. 2021</i>
+                </p>
+                <p>
+                  <strong><a href="https://lodiphie.physics.sjtu.edu.cn/">Laboratory of Low Dimensional Physics and Interface Engineering</a></strong>, Shanghai Jiao Tong University<br>
+                  <i>Summer Research Intern, advised by Prof. Hao Zheng</i><br>
+                  <i>Jun. 2019 - Sep. 2022</i>
                 </p>
               </section>
               <hr />
