--- a/index.html
+++ b/index.html
@@ -188,27 +188,27 @@
                   <h3>Research experience</h3>
                 </header>
                 <p>
-                  <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a>, Imperial College London</strong><br>
+                  <strong><a href="https://www.imperial.ac.uk/a-z-research/quantum-optics-and-laser-science/">Quantum Optics and Laser Science (QOLS) Group</a></strong>, Imperial College London<br>
                   <i>M.Sc. Student, advised by Dr. John Michniewicz</i><br>
                   <i>Jun. 2024 - Present</i>
                 </p>
                 <p>
-                  <strong><a href="http://en.baqis.ac.cn/research/groups/?cid=814">Quantum Operating System Group</a>, Beijing Academy of Quantum Information Sciences (BAQIS)</strong><br>
+                  <strong><a href="http://en.baqis.ac.cn/research/groups/?cid=814">Quantum Operating System Group</a></strong>, Beijing Academy of Quantum Information Sciences (BAQIS)<br>
                   <i>Research Intern (remote), advised by Dr. Jingbo Wang</i><br>
                   <i>May 2024 - Present</i>
                 </p>
                 <p>
-                  <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a>, Baidu, Inc.</strong><br>
+                  <strong><a href="https://research.baidu.com/Research_Areas/index-view?id=75">Institute for Quantum Computing</a></strong>, Baidu, Inc.<br>
                   <i>Research Intern, advised by Dr. Jingbo Wang</i><br>
                   <i>Mar. 2023 - Sep. 2023</i>
                 </p>
                 <p>
-                  <strong><a href="https://www.iqsqm.com/">International Joint Lab on Quantum Sensing and Quantum Metrology</a>, HUST</strong><br>
+                  <strong><a href="https://www.iqsqm.com/">International Joint Lab on Quantum Sensing and Quantum Metrology</a></strong>, HUST<br>
                   <i>Research Assistant, advised by Prof. Jianming Cai</i><br>
                   <i>Apr. 2019 - Dec. 2022</i>
                 </p>
                 <p>
-                  <strong><a href="https://bradley-lab.weebly.com/">Bradley Lab</a>, University of Saskatchewan - Saskatoon</strong><br>
+                  <strong><a href="https://bradley-lab.weebly.com/">Bradley Lab</a></strong>, University of Saskatchewan - Saskatoon<br>
                   <i><a href="https://www.mitacs.ca/our-programs/globalink-research-internship-students/">MITACS Globalink Research Internship</a> (remote), advised by Prof. Michael Bradley</i><br>
                   <i>Jun. 2021 - Oct. 2021</i>
                 </p>
